# quicker-agent

./: .gitignore  AGENTS.md  QuickerAgent.slnx  README.md  env.example
QuickerAgent.Console/: ActionDocBuildRunner.cs  ActionManifestReader.cs  Program.cs  QuickerAgent.Console.csproj
QuickerAgent.Core/: ActionDescriptionEditorInterop.cs  ActionDescriptionService.cs  ActionDescriptionUploadResult.cs  ActionDescriptionUploadService.cs  ActionDescriptionUploadSettings.cs  ActionDocOperationResult.cs  ActionLocalStore.cs  BrowserAutomationSession.cs  CdpUrlParser.cs  GetQuickerActionDocPage.cs  QkAgentSessionLauncher.cs  QuickerAgent.Core.csproj  QuickerAgentSettings.cs  QuickerBrowserFocusSuppressor.cs  QuickerBrowserLaunchInfo.cs  QuickerBrowserLauncher.cs  QuickerBrowserSession.cs  QuickerWebLoginService.cs  SessionIdHelper.cs  SessionRecord.cs  SessionStore.cs
action_doc_builder/: pyproject.toml
action_doc_builder/action_doc_builder/: __init__.py  build.py  cli.py  paths.py
actions/: README.md
actions/179c88dd-6c94-4150-2870-08deb3e75025/: meta.yaml  page.html
actions/1abfcdc2-b98c-460c-7b7e-08deb0ad6916/: meta.yaml  page.html
actions/4b629a82-889c-4531-f0b9-08deafba6653/: meta.yaml  page.html
actions/7aa833ad-3715-4342-8374-08debcceae79/: meta.yaml  page.html
actions/8fcf04a1-bf1f-43c4-7e93-08dd23adddae/: meta.yaml  (+1 more)
preview/: action_info_api.py  actions_paths.py  compile_page.py  fa_icon.py  gq_theme_fetch.py  gq_web_icon.py  preview_server.py  pyproject.toml  run-dev.ps1  run.ps1
publish/: publish-agent.ps1
scripts/: build-action-docs.ps1
(+40 files in other folders)
