[project]
name = "action-doc-builder"
version = "0.2.0"
description = "Build getquicker.net action intro HTML from page.html + intro.css"
requires-python = ">=3.11"
dependencies = [
  "css-inline>=0.14.0",
]

[project.scripts]
action-doc-build = "action_doc_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["action_doc_builder"]
